--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ section {
   border: 2px solid #8080804d;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-evenly;
   /*Distribuir equitativamente*/
 
