--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ section {
 }
 
 .carousel-item .container {
-  height: 100%;
+  height: 600px;
   width: 100%;
   display: flex;
   flex-direction: column;
